--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@iden3/contracts": "^1.4.8",
     "@iden3/js-crypto": "^1.0.3",
     "@iden3/js-iden3-core": "^1.2.1",
+    "dotenv": "^16.4.5",
     "solidity-bytes-utils": "^0.8.0",
     "web3": "^4.5.0"
   }
